--- a/iptv-v/index.html
+++ b/iptv-v/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/png" href="/iptv-logo.png"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IPTV online</title>
     <link rel="stylesheet" href="src/style.css">
 </head>
