--- a/home-1/index.html
+++ b/home-1/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/cs-home-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>主页</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
