--- a/japanese/index.html
+++ b/japanese/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/jpg" href="/images.jpg"/>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0， user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>新版标准日本语</title>
 </head>
 <body>
