--- a/50/index.html
+++ b/50/index.html
@@ -9,6 +9,8 @@
     <style>
         * {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         :root {
@@ -38,6 +40,8 @@
             background-color: var(--background-color);
             color: var(--text-color);
             font-size: 10px;
+            width: 100vw;
+            height: 100vh;
         }
 
         .header {
@@ -51,6 +55,8 @@
             align-items: flex-start;
             justify-content: space-around;
             flex-wrap: wrap;
+            max-width: 1260px;
+            margin: 0 auto;
         }
 
         table {
@@ -92,10 +98,10 @@
     </style>
 </head>
 
-<body>
-<div class="header">
+<body class="dark-mode">
+<!-- <div class="header">
     <button class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">🌙</button>
-</div>
+</div> -->
 
 <div class="main">
     <table class="table table-striped">
@@ -599,24 +605,24 @@
 </div>
 
 <script>
-    // 主题切换功能（保持不变）
-    function toggleTheme() {
-        document.body.classList.toggle('dark-mode');
-        const isDarkMode = document.body.classList.contains('dark-mode');
-        document.getElementById('theme-toggle').textContent = isDarkMode ? '☀️' : '🌙';
-        localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
-    }
+    // // 主题切换功能（保持不变）
+    // function toggleTheme() {
+    //     document.body.classList.toggle('dark-mode');
+    //     const isDarkMode = document.body.classList.contains('dark-mode');
+    //     document.getElementById('theme-toggle').textContent = isDarkMode ? '☀️' : '🌙';
+    //     localStorage.setItem('theme', isDarkMode ? 'dark' : 'light');
+    // }
 
-    // 初始化主题（保持不变）
-    (function initTheme() {
-        const savedTheme = localStorage.getItem('theme');
-        if (savedTheme === 'dark') {
-            document.body.classList.add('dark-mode');
-            document.getElementById('theme-toggle').textContent = '☀️';
-        } else {
-            document.getElementById('theme-toggle').textContent = '🌙';
-        }
-    })();
+    // // 初始化主题（保持不变）
+    // (function initTheme() {
+    //     const savedTheme = localStorage.getItem('theme');
+    //     if (savedTheme === 'dark') {
+    //         document.body.classList.add('dark-mode');
+    //         document.getElementById('theme-toggle').textContent = '☀️';
+    //     } else {
+    //         document.getElementById('theme-toggle').textContent = '🌙';
+    //     }
+    // })();
 
     class AudioCellModule extends HTMLElement {
         constructor() {
