--- a/japanese/index.html
+++ b/japanese/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/images.jpg" />
     <meta name="viewport" content="width=device-width, maximum-scale=2.0" />
-    <title>新版标准日本语</title>
+    <title>标日2</title>
   </head>
   <body>
     <div id="app"></div>
