--- a/japanese/index.html
+++ b/japanese/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/images/fav.jpg" />
+    <link rel="icon" type="image/jpg" href="%VITE_FAVICON_PATH%" />
     <meta name="viewport" content="width=device-width, maximum-scale=2.0" />
     <title>标日2</title>
   </head>
